--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: bloodyJS
 email: bloodyadmin@bloodyjs.com
 description: >- # this means to ignore newlines until "baseurl:"
-  BloodyJS is a JavaScript framework for making your life easier.
+  bloodyJS is a JavaScript framework for making your life easier.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: bloodyjs
